--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://oi328.github.io/crm-ibrahim/",
+  "homepage": "https://oi328.github.io/crm-ibrahim",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,7 +11,7 @@
     "preview": "vite preview",
     "server": "node server/index.js",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist -r https://github.com/oi328/crm-ibrahim.git"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.2",
